--- a/src/components/GoogleMap/GoogleMap.css
+++ b/src/components/GoogleMap/GoogleMap.css
@@ -1,4 +1,4 @@
-.google-map__wrapper {
+.googlemap {
   border-radius: 20px;
   padding: 0px;
   border: solid 20px #0a1f26;
@@ -7,7 +7,7 @@
   height: 500px;
 }
 
-.google-map__map {
+.googlemap__map {
   max-width: 800px;
   height: 500px;
   margin: 0;
@@ -15,12 +15,12 @@
 }
 
 @media screen and (min-width: 320px) and (max-width: 1000px) {
-  .google-map__wrapper {
+  .googlemap {
     height: 300px;
     max-width: 600px;
   }
 
-  .google-map__map {
+  .googlemap__map {
     height: 300px;
     max-width: 600px;
   }
